# MCP-actions-adapter

./: README.md  pyproject.toml
src/mcp_actions_adapter/: __init__.py  config.py  lifespan.py  main.py  modeler.py
